--- a/Accomodations.html
+++ b/Accomodations.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Accomodations</title>
+    <title>Our Accommodations</title>
 </head>
 <body>
-    
+    <div class="coinatiner">
+        <div class="beds">
+            <p>Guest palace</p>
+            <img src="" alt="">
+        </div>
+    </div>
 </body>
 </html>
