st:image-styling- optimize styling for images

--- a/Accomodations.html
+++ b/Accomodations.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./CSS/index.css">
     <title>Our Accommodations</title>
 </head>
 <body>
-    <div class="coinatiner">
+    <div class="container">
         <div class="beds">
-            <p>Guest palace</p>
-            <img src="" alt="">
+            <p>Guest <span>Palace</span></p>
+            <img src="./images/sitting.jpg" alt="our guestroom">
+        </div>
+        <div class="bedroom">
+            <p>Rest after your busy day</p>
+            <img src="./images/bedroom.jpg" alt="">
         </div>
     </div>
 </body>
