st:paragraph-styling- optimize paragraph-styling

--- a/Accomodations.html
+++ b/Accomodations.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./CSS/index.css">
     <title>Our Accommodations</title>
 </head>
+
 <body>
     <div class="container">
         <div class="beds">
-            <p>Guest <span>Palace</span></p>
+            <p class="guest">Guest <span>Palace</span></p>
+            <p class="king">Be your own king.</p>
+            <!-- <button class="btn">Book Today</button> -->
             <img src="./images/sitting.jpg" alt="our guestroom">
         </div>
         <div class="bedroom">
-            <p>Rest after your busy day</p>
             <img src="./images/bedroom.jpg" alt="">
+            <p>Rest after your busy day.</p><br>
+            <small>We have comfortable and spacious beds for you and your loved ones.</small>
         </div>
     </div>
 </body>
+
 </html>
