st:paragraph-styling- add dining image

--- a/Accomodations.html
+++ b/Accomodations.html
@@ -25,6 +25,11 @@
             <p>Rest after your busy day.</p><br>
             <small>We have comfortable and spacious beds for you and your loved ones.</small>
         </div>
+        <div class="dinning">
+            <p>Rest after your busy day.</p><br>
+            <small>We have comfortable and spacious beds for you and your loved ones.</small>
+            <img src="./images/dinning.jpg" alt="our dining">
+        </div>
     </div>
 </body>
 
