st:paragraph-styling- structure dining section

--- a/Accomodations.html
+++ b/Accomodations.html
@@ -26,8 +26,8 @@
             <small>We have comfortable and spacious beds for you and your loved ones.</small>
         </div>
         <div class="dinning">
-            <p>Rest after your busy day.</p><br>
-            <small>We have comfortable and spacious beds for you and your loved ones.</small>
+            <p>Dine With us.</p><br>
+            <small>Every meal, Real Taste.</small>
             <img src="./images/dinning.jpg" alt="our dining">
         </div>
     </div>
