st:paragraph-styling- optimize paragraph-styling

--- a/Accomodations.html
+++ b/Accomodations.html
@@ -16,20 +16,28 @@
     <div class="container">
         <div class="beds">
             <p class="guest">Guest <span>Palace</span></p>
-            <p class="king">Be your own king.</p>
+            <p class="king">-- Be your own king.--</p>
             <!-- <button class="btn">Book Today</button> -->
             <img src="./images/sitting.jpg" alt="our guestroom">
         </div>
         <div class="bedroom">
             <img src="./images/bedroom.jpg" alt="">
-            <p>Rest after your busy day.</p><br>
-            <small>We have comfortable and spacious beds for you and your loved ones.</small>
+            <p>Rest after a long busy day.</p><br>
+            <small>-- Really Comfortable and spacious beds for you and your loved ones. --</small>
         </div>
         <div class="dinning">
             <p>Dine With us.</p><br>
-            <small>Every meal, Real Taste.</small>
+            <small>-- Real Dinner, Real Taste, Enjoy. --</small>
             <img src="./images/dinning.jpg" alt="our dining">
         </div>
+        <div class="swim">
+            <img src="./images/swimming.jpg" alt="">
+            <div class="desc">
+                <p>Relax.</p>
+                <small>-- Relax your mind, play like a duck.--</small>
+            </div>
+        </div>
+
     </div>
 </body>
 
